# src/shop/shop.controller.ts
@@ -1,5 +1,6 @@
-import { Controller, Get } from '@nestjs/common';
+import { Body, Controller, Get, Post, Req, UseGuards } from '@nestjs/common';
 import { ShopService } from './shop.service';
+import { HttpSessionGuard } from 'src/guard/http.session.guard';
 
 @Controller('shop')
 export class ShopController {
@@ -8,5 +9,11 @@ export class ShopController {
   @Get('/items')
   async getShopItems() {
     return this.shopService.getAvailablePokemonItems();
+  }
+
+  @Post('/purchase')
+  @UseGuards(HttpSessionGuard)
+  async purchaseItem(@Req() req, @Body('itemId') itemId: number) {
+    return this.shopService.purchaseItem(req.user, itemId);
   }
 }
