# src/user/user.entity.ts
@@ -11,6 +11,12 @@ export class User {
   @Column()
   password: string;
 
+  @Column({ nullable: true })
+  address: string;
+
+  @Column()
+  privateKey: string;
+
   @Column({ default: () => 'CURRENT_TIMESTAMP' })
   created_at: Date;
 }
